res/style.scss
@import 'bourbon/bourbon';

#alientube {
    font-family: Verdana, Arial, Helvetica, sans-serif;
    margin-top: 30px;
    padding-bottom: 20px;
    width: 100%;
    box-sizing: border-box;
    background: #fff;
    box-shadow: 0 1px 2px rgba(0,0,0,.1);

    & a {
        color: #0066aa;
        cursor: pointer;
    }

    & a:hover {
        color: #0066aa;
        text-decoration: underline;
    }

    & .at_load {
        color: #0066aa;
        font-size: x-small;
        cursor: pointer;
        font-weight: bold;
        padding-left: 25px;

        &:hover {
            text-decoration: underline;
        }

        &.loading {
            color: #ff0000;

            &:hover {
                text-decoration: none;
            }
        }

        &.loading + .at_replycount {
            display: none;
        }
    }

    & .at_replycount {
        color: #a2a2a2;
        font-size: x-small;
    }

    & .single_line {
        text-align: center;
        padding-left: 30px;
    }

    & .error {
        padding-left: 20px;
        display: table;

        & img {
            display: table-cell;
            width: 120px;
            height: auto;
            vertical-align: middle;
        }

        & div {
            box-sizing: border-box;
            width: 430px;
            display: table-cell;
            vertical-align: middle;
            padding-left: 20px;

            & h1 {
                font-size: 120%;
                margin: 0;
            }

            & p {
                display: inline-block;
                color: #c92323;
            }
        }
    }

    & header {
        padding-top: 20px;
        padding-bottom:20px;
        line-height: 1.25;
        display: flex;
        flex-direction: row;


        & .title {
            font-size: 130%;
        }

        .at_author[data-username="[deleted]"] {
            color: #737373;
            font-weight: normal;
            pointer-events: none;
            font-style: italic;
        }

        & .vote {
            float: none;
            margin-right: 10px;
        }
    }


    & .tagline {
        font-size: x-small;
        color: #a2a2a2;
        display: block;
    }

    & .options {
        padding-top: 5px;
        font-size: 80%;
        color: #868686;
        font-weight: bold;
        display: block;

        & > * {
            cursor: pointer;
            text-decoration: none;
            color: #868686;
            padding-right: 4px;

            &:hover {
                color: #868686;
                text-decoration: underline;
            }
        }
    }

    & .vote {
        float: left;
        vertical-align: top;

        & .arrow {
            background-repeat: no-repeat;
            height: 14px;
            cursor: pointer;
            width: 15px;
            margin-left: auto;
            margin-right: auto;
            outline: none;
            background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);

            &.up {
                background-position: -84px -799px;
            }
            &.down {
                background-position: -42px -799px;
            }
        }

        &.liked {
            & .arrow.up {
                background-position: -105px -799px;
            }

            & .score {
                color: rgb(255, 139, 96);
            }
        }

        &.disliked {
            & .arrow.down {
                background-position: -63px -799px;
            }

            & .score {
                color: rgb(148, 148, 255);
            }
        }

        & .score {
            color: rgb(198, 198, 198);
            text-align: center;
            font-weight: bold;
            font-size: x-small;
            padding-top: 3px;
            padding-bottom: 3px;
        }
    }

    & .at_maximise {
        font-size: x-small;
        padding-left: 20px;
    }

    & article {
        font-family: verdana, sans-serif;
        word-wrap:break-word;
        break-word: all;
        padding-top: 10px;
        padding-bottom: 10px;

        & .at_togglehide:before {
            content: "[-]";
        }

        & .info {
            font-size: x-small;
            padding-bottom: 5px;
            margin-left: 0;
            text-align: center;
            color: #a2a2a2;
        }

        & .at_author {
            font-weight: bold;

            &[data-username="[deleted]"] {
                color: #737373;
                font-weight: normal;
                pointer-events: none;
                font-style: italic;
            }

            &[data-reddit-op] {
                color: #FFFFFF;
                font-weight: bold;
                padding: 0 2px 0 2px;
                border-radius: 3px;
                background-color: #0055DF
            }
        }

        & .vote {
            margin-top: 5px;

            & .arrow {
                padding-top: 3px;
                padding-bottom: 3px;
            }
        }

        & .at_score {
            font-weight: bold;
            color: #333;
        }

        & .at_commentcontent {
            & p {
                margin-top: 2px;
                margin-bottom: 2px;
            }
        }

        &.hidden {
            padding-top: 0;
            padding-bottom: 0;

            & .at_author {
                color: gray;
            }

            & .at_togglehide:before {
                content: "[+]";
                color: gray;
            }

            & .options,
            & .vote,
            & .at_replies,
            & .at_commentcontent {
                display: none;
            }
        }

        & .info {
            display: inline-block;
            margin-left: 15px;
        }
    }

    & .at_replies {
        padding-top: 5px;

        & article {
            padding-left: 20px;
            padding-bottom: 0;
            border-left: dotted 1px #cacaca;
        }
    }

    & .at_flair {
        padding: 0 2px;
        background: #f5f5f5;
        color: #555;
        border: 1px solid #ddd;
        border-radius: 2px;
    }

}

.at_commentmain {
    margin-left: 20px;
}

.at_tab {
    flex-grow: 1;
    position: relative;
    z-index: 1;
    font-family: Verdana, sans-serif !important;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    margin-bottom: -1px;
    margin-left: -5px;
    height: 33px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    overflow: hidden;
    font-size: 12px !important;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    border: 1px solid #d3d3d3;
    color: #333;

    &:hover {
        border: 1px solid #9c9c9c;
        z-index: 50;
    }

    &:focus {
        outline: 0;
    }

    &.active {
        background-color: #fff;
        border: 1px solid #c6c6c6;
        border-bottom: 1px solid #fff;
        box-shadow: inset 0 1px 0 #ddd;
        background-image: none;
        z-index: 50;

        &:hover {
            border-bottom: 1px solid #fff;
        }
    }

    &.border {
        border-left: 1px solid #d3d3d3;
    }
}


#at_tabcontainer {
    margin-left: 4px;
    position: relative;
    display: flex;
    flex-direction: row;
}

#at_comments {
    padding-left: 20px;
    padding-right: 20px;
}

@-moz-document url-prefix() {
    .at_tab {
        padding-left: 8px;
        padding-right: 8px;
    }
}

#at_overflow {
    display: inline-block;
    position: relative;
    box-sizing: border-box;
    vertical-align: bottom;
    margin-left: -5px;
    width: 33px;
    height: 32px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    opacity: 0.5;
    border: 1px solid #d3d3d3;
    border-left: none;
    border-bottom: none;

    &:focus {
        outline: 0;
    }

    &:hover {
        opacity: 1;
    }

    & img {
        position: absolute;
        top: 50%;
        left: 8px;
    }

    & ul {
        min-width: 130px;
        max-width: 250px;
        text-overflow: ellipsis;
        padding-top: 5px;
        padding-bottom: 5px;
        box-sizing: border-box;
        opacity: 1;
        border: 1px solid #ccc;
        border-radius: 2px;
        -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
        background: #fff;
        margin-top: 30px;
        display: none;
        position: relative;
        white-space: nowrap;
        float: left;
        z-index: 100;
        @include transition(opacity 1s easy-in);

        & li {
            line-height: 1.8;
            padding-left: 10px;
            padding-right: 10px;

            &:hover {
                background: #333;
                color: #fff;
            }
        }
    }
}

a[href$="/s"],
a[href$="/spoiler"] {
    cursor: default;
    background: #000!important;
    color: #000!important;
    line-height: 1.4;
    border: 1px solid black;
    padding-right: 1px;
}

a[href$="/s"]:hover,
a[href$="/spoiler"]:hover {
    color: #fff !important;
}

a[href$="/s"]::before,
a[href$="/spoiler"]::before {
    background: #FFF!important;
    color: #000!important;
    padding: 0px 1px;
    margin: 0px;
    margin-right: 1px;
    content: "Spoiler";
}

.loading {
    position: relative;
    padding-top: 40px;
    margin-left: auto;
    margin-right: auto;
    width: 150px;
    height: 150px;
}

.loading_inner {
    animation: load 1.7s infinite ease;
    font-size: 90px;
    text-indent: -9999em;
    overflow: hidden;
    width: 1em;
    height: 1em;
    border-radius: 50%;
    margin: 0.8em auto;
    position: relative;
}

@keyframes load {
  0% {
    transform: rotate(0deg);
    box-shadow: -0.11em -0.83em 0 -0.4em #ff7d46, -0.11em -0.83em 0 -0.42em #ff7d46, -0.11em -0.83em 0 -0.44em #ff7d46, -0.11em -0.83em 0 -0.46em #ff7d46, -0.11em -0.83em 0 -0.477em #ff7d46;
  }
  5%,
  95% {
    box-shadow: -0.11em -0.83em 0 -0.4em #ff7d46, -0.11em -0.83em 0 -0.42em #ff7d46, -0.11em -0.83em 0 -0.44em #ff7d46, -0.11em -0.83em 0 -0.46em #ff7d46, -0.11em -0.83em 0 -0.477em #ff7d46;
  }
  30% {
    box-shadow: -0.11em -0.83em 0 -0.4em #ff7d46, -0.51em -0.66em 0 -0.42em #ff7d46, -0.75em -0.36em 0 -0.44em #ff7d46, -0.83em -0.03em 0 -0.46em #ff7d46, -0.81em 0.21em 0 -0.477em #ff7d46;
  }
  55% {
    box-shadow: -0.11em -0.83em 0 -0.4em #ff7d46, -0.29em -0.78em 0 -0.42em #ff7d46, -0.43em -0.72em 0 -0.44em #ff7d46, -0.52em -0.65em 0 -0.46em #ff7d46, -0.57em -0.61em 0 -0.477em #ff7d46;
  }
  100% {
    transform: rotate(360deg);
    box-shadow: -0.11em -0.83em 0 -0.4em #ff7d46, -0.11em -0.83em 0 -0.42em #ff7d46, -0.11em -0.83em 0 -0.44em #ff7d46, -0.11em -0.83em 0 -0.46em #ff7d46, -0.11em -0.83em 0 -0.477em #ff7d46;
  }
}

